--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,8 @@ allprojects {
 
 configure(subprojects) {
 	apply plugin: 'java-library'
-	sourceCompatibility = 8.0
+//	sourceCompatibility = 8.0
+	sourceCompatibility = 16.0
 	compileJava {
 		options.incremental = true
 	}
